<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.logbook.todo.ui.task_list.TaskListFragment"
        android:label="@string/menu_home" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.logbook.todo.ui.task.TaskFragment"
        android:label="@string/menu_add_task" >
        <argument
            android:name="taskId"
            app:argType="long"
            android:defaultValue="1234L" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.logbook.todo.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <argument
        android:name="taskId"
        app:argType="long"
        android:defaultValue="1234L" />
</navigation>