<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Task Name -->
        <TextView
            android:id="@+id/textViewTaskName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_min="48dp"
            android:text="@string/task_name"
            android:textStyle="bold"
            android:layout_margin="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnExpandCollapse"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintHeight_default="wrap" />

        <!-- Expand/Collapse Arrow -->
        <Button
            android:id="@+id/btnExpandCollapse"
            android:layout_width="wrap_content"
            app:layout_constraintHeight_min="48dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:padding="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textViewTaskName"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
            android:gravity="center"
            android:contentDescription="@string/expand_collapse_button_description" />


        <!-- Attachment URI (ImageView) -->
        <ImageView
            android:id="@+id/imageViewAttachment"
            android:layout_width="300dp"
            android:contentDescription="@string/button_attach_photo"
            android:minHeight="300dp"
            android:maxHeight="300dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_no_photography_24"
            android:layout_margin="4dp"
            android:visibility="visible"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTaskName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Completion Date -->
        <TextView
            android:id="@+id/textViewCompletionDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/completion_date"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_margin="8dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/imageViewAttachment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Priority -->
        <TextView
            android:id="@+id/textViewPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_margin="8dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/textViewCompletionDate"
            app:layout_constraintStart_toStartOf="parent" />


        <!-- Subtasks ListView -->

        <TextView
            android:id="@+id/textViewSubTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sub_task"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_margin="8dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/textViewPriority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="1"/>

        <ListView
            android:id="@+id/listViewSubtasks"
            android:layout_width="match_parent"
            app:layout_constraintHeight_min="160dp"
            app:layout_constraintHeight_max="300dp"
            android:layout_height="60dp"
        android:maxHeight="300dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        android:layout_margin="0dp"
        android:padding="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewSubTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



        <!-- Tags -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/taskChipGroupTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/listViewSubtasks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:singleLine="false">
        </com.google.android.material.chip.ChipGroup>

        <!-- Completion Status -->
        <CheckBox
            android:id="@+id/checkBoxTaskCompletionStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:visibility="gone"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/taskChipGroupTags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Edit Button -->
        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="320dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
            app:layout_constraintTop_toBottomOf="@id/checkBoxTaskCompletionStatus"
            app:layout_constraintHorizontal_bias="0.5" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/delete"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/buttonEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxTaskCompletionStatus"
            app:layout_constraintHorizontal_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
